# mmm

./: LICENSE  package-lock.json  package.json  pyproject.toml
scripts/: install.ps1
src/: cli.js  config.js  constants.js  curseforge_source.py  main.py  maven_source.py  postinstall.js  preuninstall.js  source_manager.js
src/sources/: curseforge.js
