[tool.poetry]
name = "mmm"
version = "0.1.0"
description = ""
authors = ["hnOsmium0001"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
argparse = "^1.4.0"
cfscrape = "^2.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
